arches/app/media/css/main.css
/* ... */
:-moz-placeholder { 
    color: #acacac !important; 
    text-overflow: ellipsis; 
}

::-moz-placeholder { 
    color: #acacac !important; 
    text-overflow: ellipsis; 
} 

/* for the future */
:-ms-input-placeholder { 
    color: #acacac !important; 
    text-overflow: ellipsis; 
}



/* Data Entry (CRUD) classes
------------------------------------*/
.arches-record {
    margin-left: 35px;
}

.arches-child-record {
    margin-left: 35px;
    margin-top: -27px;
}

.arches-panel-header {
    background: #f5f5f5;
}

.arches-panel-footer {
    background: #f5f5f5;
}

.arches-report-date {
    font-size: 19px;
    font-weight: 200;
    margin-top: -15px;
    margin-bottom: 20px;
    color: #57889c
}

.arches-report-grey-block {
    background: #fcfcfc;
    padding: 20px;
    border-color: #dcdcdc;
    border: 1px solid rgba(0,0,0,.1);
    border-radius: 2em 1em 4em / 0.5em 3em;
}

.arches-box-grey-border {
    border-color: #dcdcdc; 
    border: 1px solid rgba(0,0,0,.1);
    padding-left: 20px;
    background: #ffffff;
}

.arches-scrollable {
    height: 500px;
    overflow-y: scroll-y;
}


.arches-toolbar {   
    border: 1px solid rgba(200,200,200,0.5);
    background: #f9f9f9; /* rgba(71,101,160,0.15);  alternate background: #065D88 or #dedede;  */
    margin-top: -20px;
    margin-bottom: 10px;
    margin-left: 0px;
    margin-right: 0px;
    padding-top: 15px;
    padding-left: 10px;
    padding-right: 10px;
}

.arches-map-footer {
    margin-top: -74px;
    height: 75px; 
    opacity: .80;
    background: steelblue;
}

.arches-form-toggle {
    margin-top: -35px;
    margin-bottom: 10px;
    margin-left: -45px;
    margin-right: 10px;
}

.arches-toggle-label {
    color: steelblue; 
    font-weight: 400;
}

.arches-crud-buttons {
    height: 60px;
    background: #ededed;
    border: 1px solid rgba(0,0,0,.1);
    padding-top: 10px;
    margin-left: 0px;
    margin-right: 0px;
    width: 100%;
}

.arches-report-map {
    height: 500px;
    margin-top: 150px;
    border-width: 0px 1px 1px 1px; 
    border-color: #cfcfcf; 
    border-style: solid;
}

.arches-map-info-panel {
    margin-top: -446px;
    margin-right: 0px;
    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
}

.arches-basemap-panel {
    margin-top: -446px;     
    z-index: 100;
    height: 250px;
    overflow-y: scroll;
    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
}

.arches-basemap-thumbnail {
    border: 1px solid rgba(0,10,0,.3);
    width: 68px;
    height: 64px;
    border-radius: 3px 0px 0px 3px;
}

.arches-basemap-entry {
    background-color: #f9f9f9;
    border-radius: 3px 3px 3px 3px;
}

.arches-basemap-entry:active {
    background-color: #f0f0f0;
}

.arches-basemap-caption {
    font-size: 18px;
    margin-left: 15px;
}

.caption-text {
    color: #999;
    font-weight: 300;
}

.caption-text:active {
    color: #555;
    font-weight: 400;
}

.arches-basemap-caption-search {
    font-size: 18px;
    margin-left: 5px;
    width: 150px;
    overflow: hidden;
}

.caption-text-search {
    color: #999;
    font-weight: 300;
}

.arches-form-inline {
    display: inline;
}

.arches-form-group {
    display: inline-block;
    margin-bottom: 0px;
    vertical-align: middle;
}

.arches-info-theme {
    list-style-type: none;
    margin-top: 2px;
    margin-left: -40px;
    margin-right: -5px;
    font-size: 15px;
    padding-left: 17px;

}

.arches-info-theme:hover {
    background: #f5f5f5;
}

.arches-info-theme:hover > .arches-theme-menu {
    color: #4765a0;
}

.arches-crud-title-block {
    background: #fdfdfd;
}

.arches-crud-title {
    font-size: 18px;
    font-style: normal;
    font-weight: 300;
}

.arches-CRUD-child {
    font-size: 15px;
    font-style: normal;
}

.arches-CRUD-child-title {
    font-size: 16px;
    font-style: normal;
    font-weight: 300;
    color: #999;
    margin-left: 5px;
}

.arches-crud-child-section {
    margin-top: -10px;
    padding-left: 10px;
}

.arches-CRUD-delete {
    font-size: 16px;
    color: #e74c3c;
}

.arches-crud-record {
    font-size: 15px;
    display: block;
    padding-left: 8px;
    padding-right: 5px;
    padding-top: 1px;
    padding-bottom: 1px;
}

.arches-crud-record:hover {
    background: #f5f5f5;
}


a.disabled {
   pointer-events: none;
   cursor: default;
   color: #777;
}


/* Resource Report
------------------------------------*/
.arches-report-nav {
    position: fixed;
    z-index: 900;
    width: 100%;
    top: 0px;
}

.arches-topnav {
    background: #ffffff;
    margin-top: -150px;
}

.arches-report-header {
    font-size: 15px;
    font-weight: 500;
    margin-bottom: -2px;
    color: #585f69;
}

.arches-report-content {
    font-size: 15px;
    color: #57889c;
    line-height: 17px;
}

/*Extend Search wigdet
------------------------------------*/
.arches-search {
    width: 500px;
}

.arches-search-terms-panel {
    background: #ffffff;
    margin-left: 0px;
    margin-top: -80px;
    margin-right: 0px;
    padding-left: 15px;
    padding-top: 5px;
    padding-bottom: 15px;
    height: 150px;
    overflow-y: scroll;
}

.arches-search-stats {
    font-size: 14px;
}

.arches-search-term {
    font-size: 15px;
    font-weight: 500;
    color: steelblue;
}


/*Form classes
------------------------------------*/
.arches-theme-menu:hover {
    color: #4765a0;
}


/*RDM classes
------------------------------------*/
.arches-RDM-URI {
    color: #494949;
    margin-top: 5px;
}

.arches-RDM-label-highlighted {
    font-size: 15px;
    display: block;
    padding-left: 8px;
    padding-right: 5px;
    padding-top: 1px;
    padding-bottom: 1px;    
}

.arches-RDM-label-highlighted:hover {
    background-color: #f9f9f9;
}

.arches-RDM-label {
    font-size: 15px;
    padding-left: 8px;
    padding-right: 5px;
    padding-top: 1px;
    padding-bottom: 2px;
}

.arches-RDM-link {
    font-size: 15px;
    font-weight: 500;
    padding-left: 5px;
    padding-right: 5px;
    display: block-inline;
    /*background-color: #f5f5f5;*/
}
/* ... */

